# git-gpui

./: Cargo.toml
src/: main.rs  project_view.rs
